[package]
name = "plabayo-news"
version = "0.0.1"
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
edition = "2021"
build = "src/build.rs"

[package.metadata.i18n]
available-locales = ["en"]
default-locale = "en"
load-path = "locales"

[dependencies]
env_logger = "0.8"
actix-web = "3"
actix-files = "0.5"
askama = "0.9"
anyhow = "1"
fnv = "1"
lazy_static = "1.4.0"
rust-i18n = "0"

[build-dependencies]
askama = "0.9"
anyhow = "1"
vergen = { version = "5", default-features = false, features = ["build"] }
