[package]
name = "plabayo-news-web"
version = "0.0.1"
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
edition = "2021"
build = "./src/build.rs"

[[bin]]
name = "plabayo-news-web"
path = "./src/main.rs"

[package.metadata.i18n]
locales = [ "en", "es", "nl", "de", "fr" ]
path = "./site/locales"
out = "./src/site/l18n"

[package.metadata.i18n.pages]
path = "./site/templates/pages"
not_found = "unknown"
templates_dir = "pages"
static = ["api", "contribute", "faq", "guidelines", "security", "unknown"]

[dependencies]
plabayo-news-data = { path = "../plabayo-news-data" }
structopt = "0"
env_logger = "0"
actix-web = "3"
futures = "0"
actix-web-static-files = "3"
cached = "0"
static-files = "0"
askama = "0"
anyhow = "1"
fnv = "1"
lazy_static = "1"
chrono = "0"

[build-dependencies]
plabayo-news-builder = { path = "../plabayo-news-builder" }
actix-web-static-files = "3"
askama = "0"
anyhow = "1"
vergen = { version = "5", default-features = false, features = ["build", "git"] }
