[package]
name = "plabayo-news-web"
version = "0.0.1"
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
edition = "2021"
build = "./src/build.rs"

[[bin]]
name = "plabayo-news-web"
path = "./src/main.rs"

[package.metadata.i18n]
locales = [ "en", "es", "nl", "de", "fr" ]
path = "./site/locales"
out = "./src/site/l18n"

[package.metadata.i18n.pages]
path = "./site/templates/pages"
not_found = "unknown"
templates_dir = "pages"
static = ["api", "contribute", "faq", "guidelines", "security", "unknown"]

[dependencies]
plabayo-news-data = { path = "../plabayo-news-data" }
axum = "0"
tokio = { version = "1", features = ["full"] }
rust-embed = "6"
mime_guess = "2"
tracing = "0"
tracing-subscriber = { version="0", features = ["env-filter"] }
tower-http = { version = "0", features = ["trace", "util"] }
structopt = "0"
env_logger = "0"
futures = "0"
cached = "0"
askama = "0"
anyhow = "1"
fnv = "1"
lazy_static = "1"
chrono = "0"

[build-dependencies]
plabayo-news-builder = { path = "../plabayo-news-builder" }
askama = "0"
anyhow = "1"
vergen = { version = "5", default-features = false, features = ["build", "git"] }
